# Type-Arena

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.deploy  Dockerfile.local  README.md  README_JUDGE.md  SETUP_WALLET.md  WALLET_INTEGRATION_INSTRUCTIONS.md  commit.txt  commit_utf8.txt  debug_git.bat  deploy.ps1  deploy_conway.ps1  deploy_conway.sh  deploy_docker.sh  deploy_fresh_chain.sh  deploy_testnet.ps1  deploy_testnet.sh  docker-compose.yml  git_debug.txt  install_linera.ps1  push.txt  push_fix.bat  push_log.txt  push_utf8.txt  repo_files.txt  run.sh  run_docker_internal.sh  run_local.ps1  run_local_docker.ps1  run_with_path.sh  status.txt  test_faucet.sh
backend/: leaderboard.json  package-lock.json  package.json
backend/src/: leaderboardManager.ts  roomManager.ts  server.ts  tournamentManager.ts  types.ts
contracts/type_arena/: Cargo.toml  build_error_2.txt  build_error_3.txt  build_error_4.txt  build_output.txt  build_output2.txt  build_output3.txt  build_status.txt  check_error.txt  errors.txt  errors_015.txt  errors_v2.txt  errors_v3.txt  test_output.txt  test_output_2.txt
contracts/type_arena/.cargo/: config.toml.bak
contracts/type_arena/src/: contract.rs  lib.rs  service.rs  state.rs
dependencies/linera-protocol-main/linera-base/: build.rs
dependencies/linera-protocol-main/linera-base/src/: data_types.rs
dependencies/linera-protocol-main/linera-views/: build.rs
frontend/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  market_init.json  market_params.json  oracle_init.json  oracle_params.json  token_init.json
frontend/abi/: Cargo.toml
frontend/abi/src/: lib.rs
frontend/client/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/client/.claude/agents/: context-aware-documenter.md
frontend/client/public/: config.json
frontend/client/src/: App.tsx  index.css  types.ts
frontend/client/src/components/: CreateMarketModal.tsx  Header.tsx  MarketCard.tsx  PredictionModule.tsx  TypingArea.tsx
frontend/client/src/lib/: graphql.ts
frontend/client/src/services/: LineraService.ts  WalletService.ts
frontend/market/: Cargo.toml
frontend/market/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/oracle/: Cargo.toml
frontend/oracle/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/token/: Cargo.toml
frontend/token/src/: contract.rs  lib.rs  service.rs  state.rs
wallet-integration/: README.md  index.html
