[workspace]
resolver = "2"
members = [
    "abi",
    "token",
    "market",
    "oracle",
]

[workspace.dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }
linera-sdk = { version = "0.15.5" }
futures = { version = "0.3" }
log = { version = "0.4.27" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.40", features = ["rt", "sync"] }

abi = { path = "./abi" }
token = { path = "./token" }
market = { path = "./market" }
oracle = { path = "./oracle" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
