[package]
name = "type_arena"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.11.3"
linera-views = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
async-graphql = "7.0.2"
thiserror = "1.0"

[build-dependencies]
linera-sdk = "0.11.3"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
linera-views = "0.11.3"
