[package]
name = "type_arena"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.8"
async-graphql = { version = "7.0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bcs = "0.1.6"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "type_arena_contract"
path = "src/contract.rs"

[[bin]]
name = "type_arena_service"
path = "src/service.rs"
