[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
abi.workspace = true
market.workspace = true
async-graphql.workspace = true
log.workspace = true
linera-sdk.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "sync"] }
linera-sdk = { workspace = true, features = ["test", "wasmer"] }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "oracle_contract"
path = "src/contract.rs"

[[bin]]
name = "oracle_service"
path = "src/service.rs"
